external-crates/move/crates/move-compiler/tests/move_check/parser/use_with_module.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_with_module.move:2:1
  │
2 │ use 0x1::Module;
  │ ^^^ Invalid code unit. Expected 'address' or 'module'. Got 'use'

error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/use_with_module.move:3:8
  │
3 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

